--- a/index.html
+++ b/index.html
@@ -22,11 +22,27 @@
     <meta name="robots" content="noindex" />
     <meta name="rating" content="general" />
     <meta name="language" content="English" />
+    <meta property="og:site_name" content="Kildare County Council Arts Service">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ArtsInCoKildare">
+
+    <!-- Open Graph and Twitter Fallback Tags -->
+    <meta property="og:title" content="Kildare County Council Arts Service">
+    <meta name="twitter:title" content="Kildare County Council Arts Service">
+
+    <meta property="og:description" content="Discover the arts in Kildare.">
+    <meta name="twitter:description" content="Discover the arts in Kildare.">
+
+    <meta property="og:image" content="https://kildarecoco.ie/ArtsServiceNew/images/logo/thumbnail_KCC_logo.png">
+    <meta name="twitter:image" content="https://kildarecoco.ie/ArtsServiceNew/images/logo/thumbnail_KCC_logo.png">
+
+    <meta property="og:url" content="https://kildarecoco.ie/ArtsServiceNew/">
+    <meta property="og:type" content="website">
 
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap 5.3 CSS from library.html -->
+    <!-- Bootstrap 5.3 CSS -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet"
@@ -40,13 +56,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <!-- Custom Navbar CSS from library.html -->
+    <!-- Custom Navbar CSS -->
     <link
       rel="stylesheet"
       href="navbarstylearts.css"
     />
 
-    <!-- Favicon from home.html -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -65,7 +80,7 @@
       sizes="16x16"
     />
 
-    <!-- Google tag (gtag.js) from home.html -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-62CW9BKL28"
@@ -87,7 +102,6 @@
         <a href="#main-content">skip to main content</a>
       </div>
 
-      <!--top bar based on home.html content and library.html structure -->
       <header class="top-bar">
         <div class="container">
           <div class="clearfix">
@@ -107,13 +121,13 @@
                   href="https://www.facebook.com/kildareartsservice/"
                   target="_blank"
                   ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/Facebook-Logo.png"
+                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/Facebook_Logo_Secondary32x32.png"
                     class="socialmediacurve"
                     alt="Facebook Icon - this will open the Kildare Arts Service Facebook page in a new tab" /></a
                 >&nbsp;
                 <a href="https://twitter.com/ArtsInCoKildare/" target="_blank"
                   ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/Twitter-Logo.png"
+                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/x-logo-white32x32.png"
                     class="socialmediacurve"
                     alt="Twitter Icon - this will open the Kildare Arts Service Twitter account in a new tab" /></a
                 >&nbsp;
@@ -121,7 +135,7 @@
                   href="https://www.instagram.com/arts_in_co_kildare/"
                   target="_blank"
                   ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/Instagram-logo.png"
+                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/Instagram_Glyph_White32x32.png"
                     class="socialmediacurve"
                     alt="Instagram Icon - this will open the Kildare Arts Service Instagram account in a new tab" /></a
                 >&nbsp;
@@ -129,7 +143,7 @@
                   href="https://www.youtube.com/user/KildareArtsService"
                   target="_blank"
                   ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/YouTube-Logo.png"
+                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/yt_logo_white_digital32x100.png"
                     class="socialmediacurve"
                     alt="Youtube Icon - this will open the Kildare Arts Service YouTube account in a new tab" /></a
                 >&nbsp;
@@ -147,7 +161,7 @@
         <div class="container-fluid justify-content-center">
           <a class="navbar-brand" href="https://kildarecoco.ie/ArtsServiceNew/">
             <img
-              src="https://kildarecoco.ie/images/logo/KildareCountyCouncilCrest.png"
+              src="https://kildarecoco.ie/ArtsServiceNew/images/logo/thumbnail_KCC_logo.png"
               alt="KCC Logo"
               title="Kildare County Council"
               style="max-height: 80px"
@@ -217,7 +231,7 @@
             <script type="text/javascript">
               function googleTranslateElementInit() {
                 new google.translate.TranslateElement(
-                  { pageLanguage: "en" },
+                  { pageLanguage: "en", layout: google.translate.TranslateElement.InlineLayout.SIMPLE },
                   "google_translate_element"
                 );
               }
@@ -691,7 +705,7 @@
                         href="https://www.facebook.com/kildareartsservice/"
                         target="_blank"
                         ><img
-                          src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/Facebook-Logo.png"
+                          src="https://kildarecoco.ie/ArtsServiceNew/images/logo/Facebook_Logo_Secondary32x32.png"
                           class="socialmediacurve"
                           alt="Facebook Icon - this will open the Kildare Arts Service Facebook page in a new tab" /></a
                       >&nbsp;
@@ -699,7 +713,7 @@
                         href="https://twitter.com/ArtsInCoKildare/"
                         target="_blank"
                         ><img
-                          src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/Twitter-Logo.png"
+                          src="https://kildarecoco.ie/ArtsServiceNew/images/logo/x-logo-white32x32.png"
                           class="socialmediacurve"
                           alt="Twitter Icon - this will open the Kildare Arts Service Twitter account in a new tab" /></a
                       >&nbsp;
@@ -707,7 +721,7 @@
                         href="https://www.instagram.com/arts_in_co_kildare/"
                         target="_blank"
                         ><img
-                          src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/Instagram-logo.png"
+                          src="https://kildarecoco.ie/ArtsServiceNew/images/logo/Instagram_Glyph_White32x32.png"
                           class="socialmediacurve"
                           alt="Instagram Icon - this will open the Kildare Arts Service Instagram account in a new tab" /></a
                       >&nbsp;
@@ -715,22 +729,13 @@
                         href="https://www.youtube.com/user/KildareArtsService"
                         target="_blank"
                         ><img
-                          src="https://kildarecoco.ie/ArtsServiceNew/images/SocialMedia/YouTube-Logo.png"
+                          src="https://kildarecoco.ie/ArtsServiceNew/images/logo/yt_logo_white_digital32x100.png"
                           class="socialmediacurve"
                           alt="Youtube Icon - this will open the Kildare Arts Service YouTube account in a new tab" /></a
                       >&nbsp;
                     </li>
                   </ul>
                   <br /><br />
-
-                  <div class="link_btn float_left">
-                    <a
-                      href="mailto:arts@kildarecoco.ie"
-                      class="btn btn-primary"
-                      title="Contact Us"
-                      >Contact Us</a
-                    >
-                  </div>
                 </div>
                 <br /><br /><br />
               </div>
@@ -758,7 +763,7 @@
                           style="font-size: 20px"
                         ></span
                         ><a
-                          href="tel:0035345980872"
+                          href="tel:+35345980872"
                           class="tel text-white"
                           style="text-decoration: none"
                         >
@@ -837,11 +842,11 @@
           id="copyrightFooter"
           style="background-color: #628474"
         >
-          Copyright © 2025 - All Rights Reserved by Arts Service
+          Copyright © 2025 - All Rights Reserved by Kildare County Council Arts Service
         </div>
       </footer>
 
-      <!-- Scroll Top Button from home.html -->
+      <!-- Scroll Top Button -->
       <button
         class="scroll-top tran3s color2_bg"
         title="This will help you scroll up page"
