--- a/index.html
+++ b/index.html
@@ -105,50 +105,12 @@
       <header class="top-bar">
         <div class="container">
           <div class="clearfix">
-            <ul class="top-bar-text float_left">
+            <ul class="top-bar-text text-center fs-5">
               <li>
-                <i class="icon-technology-1"></i>
-                <a href="tel:0035345980872" class="tel">045 980872</a>
-              </li>
-              <li>
-                <i class="icon-world"></i>Library and Arts HQ, Riverbank Arts
-                Centre, Main Street, Newbridge, Co. Kildare, W12 D962
+                Kildare County Council Arts Service
               </li>
             </ul>
-            <ul class="social float_right">
-              <li>
-                <a
-                  href="https://www.facebook.com/kildareartsservice/"
-                  target="_blank"
-                  ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/Facebook_Logo_Secondary32x32.png"
-                    class="socialmediacurve"
-                    alt="Facebook Icon - this will open the Kildare Arts Service Facebook page in a new tab" /></a
-                >&nbsp;
-                <a href="https://twitter.com/ArtsInCoKildare/" target="_blank"
-                  ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/x-logo-white32x32.png"
-                    class="socialmediacurve"
-                    alt="Twitter Icon - this will open the Kildare Arts Service Twitter account in a new tab" /></a
-                >&nbsp;
-                <a
-                  href="https://www.instagram.com/arts_in_co_kildare/"
-                  target="_blank"
-                  ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/Instagram_Glyph_White32x32.png"
-                    class="socialmediacurve"
-                    alt="Instagram Icon - this will open the Kildare Arts Service Instagram account in a new tab" /></a
-                >&nbsp;
-                <a
-                  href="https://www.youtube.com/user/KildareArtsService"
-                  target="_blank"
-                  ><img
-                    src="https://kildarecoco.ie/ArtsServiceNew/images/logo/yt_logo_white_digital32x100.png"
-                    class="socialmediacurve"
-                    alt="Youtube Icon - this will open the Kildare Arts Service YouTube account in a new tab" /></a
-                >&nbsp;
-              </li>
-            </ul>
+            
           </div>
         </div>
       </header>
